@@ -23,9 +23,9 @@
  10            71      0.2000              0              0.1129     1              1.0e-10             0.999999                        a_spin1        spin magnitude of object 1 (-)
  11            72      0.9000              0              0.1600     1              -0.999999           0.999999                        cos theta1     spin tilt of object 1 (-)
  12            73      3.1400              0              1.5000     1              0.0                 6.28                            phi1           spin phase of object 1 (rad)
- 13            74      0.5001              0              0.1129     1              1.0e-10             0.999999                        a_spin2        spin magnitude of object 2 (-)
- 14            75      0.1000              0              0.1600     1              -0.999999           0.999999                        cos theta2     spin tilt of object 2 (-)
- 15            76      1.5700              0              1.5000     1              0.0                 6.28                            phi2           spin phase of object 2 (rad)
+ 13            81      0.5001              0              0.1129     1              1.0e-10             0.999999                        a_spin2        spin magnitude of object 2 (-)
+ 14            82      0.1000              0              0.1600     1              -0.999999           0.999999                        cos theta2     spin tilt of object 2 (-)
+ 15            83      1.5700              0              1.5000     1              0.0                 6.28                            phi2           spin phase of object 2 (rad)
 
 
  ###################################################################################################################################################################################
