@@ -482,21 +482,32 @@ $i$ is defined (1) or not (0).
   \textbf{64} & $M_2$  & Mass 2 & $M_\odot$ &  $[0,\infty[$ \\
 \end{tabular}
 
-\subsection{Spin}
+\subsection{Spin 1}
 \begin{tabular}{lllll}
   \textbf{Number} & \textbf{Variable} & \textbf{Description} & \textbf{Unit} & \textbf{Range} \\
   \textbf{71} & $a_\mathrm{spin,1}$  & Spin magnitude 1 & --- & $[0,1]$ \\
   \textbf{72} & $\cos(\theta_\mathrm{spin,1})$  & Spin tilt 1 & --- & $[-1,1]$ \\
   \textbf{73} & $\varphi_\mathrm{spin,1}$  ($\alpha_\mathrm{c}$)  & Spin phase 1 & rad & $[0,2\pi[$ \\
-  \textbf{74} & $a_\mathrm{spin,2}$  & Spin magnitude 2 & --- & $[0,1]$ \\
-  \textbf{75} & $\cos(\theta_\mathrm{spin,2})$  & Spin tilt 2 & --- & $[-1,1]$ \\
-  \textbf{76} & $\varphi_\mathrm{spin,2}$  & Spin phase 2 & rad & $[0,2\pi[$ \\
+  \textbf{75} & $S_\mathrm{1,x}$  & Spin 1 magnitude, x-component & --- & $[0,1]$ \\
+  \textbf{76} & $S_\mathrm{1,y}$  & Spin 1 magnitude, y-component & --- & $[0,1]$ \\
+  \textbf{77} & $S_\mathrm{1,z}$  & Spin 1 magnitude, z-component & --- & $[0,1]$ \\
+\end{tabular}
+
+\subsection{Spin 2}
+\begin{tabular}{lllll}
+  \textbf{Number} & \textbf{Variable} & \textbf{Description} & \textbf{Unit} & \textbf{Range} \\
+  \textbf{81} & $a_\mathrm{spin,2}$  & Spin magnitude 2 & --- & $[0,1]$ \\
+  \textbf{82} & $\cos(\theta_\mathrm{spin,2})$  & Spin tilt 2 & --- & $[-1,1]$ \\
+  \textbf{83} & $\varphi_\mathrm{spin,2}$  & Spin phase 2 & rad & $[0,2\pi[$ \\
+  \textbf{85} & $S_\mathrm{2,x}$  & Spin 2 magnitude, x-component & --- & $[0,1]$ \\
+  \textbf{86} & $S_\mathrm{2,y}$  & Spin 2 magnitude, y-component & --- & $[0,1]$ \\
+  \textbf{87} & $S_\mathrm{2,z}$  & Spin 2 magnitude, z-component & --- & $[0,1]$ \\
 \end{tabular}
 
 \subsection{Merger, ringdown}
 \begin{tabular}{lllll}
   \textbf{Number} & \textbf{Variable} & \textbf{Description} & \textbf{Unit} & \textbf{Range} \\
-  \textbf{81} &   & & & $[,]$ \\
+  \textbf{91} &   & & & $[,]$ \\
 \end{tabular}
 
 
