@@ -2,6 +2,10 @@
   ChangeLog for SPINspiral code repository.  
   Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
   
+   163: sluys, 10/06/2009
+     - moved parIDs 74-76 (spin 2) to 81-83; input files changed, check doc/input_LAL-15/
+     - added IDs 75-77, 85-87 for carthesian spin parameters (see manual)
+     
    162: sluys, 09/06/2009
      - implementing reading of injection XML files
      - you need to include libmetaio/include and link against liblalmetaio to compile
